2. fix for modifying final fields
Fixes #178